--- a/environment.yml
+++ b/environment.yml
@@ -2,33 +2,33 @@ name: visualCheXbert
 channels:
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2021.1.19=hecd8cb5_0
-  - certifi=2020.12.5=py37hecd8cb5_0
-  - intel-openmp=2019.4=233
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - llvm-openmp=10.0.0=h28b9765_0
-  - mkl=2019.4=233
-  - mkl-service=2.3.0=py37h9ed2024_0
-  - mkl_fft=1.3.0=py37ha059aab_0
-  - mkl_random=1.1.1=py37h959d312_0
-  - ncurses=6.2=h0a44026_1
-  - numpy-base=1.19.2=py37hcfb5961_0
-  - openssl=1.1.1j=h9ed2024_0
-  - pip=21.0.1=py37hecd8cb5_0
-  - python=3.7.7=hf48f09d_4
-  - readline=8.1=h9ed2024_0
-  - scipy=1.6.1=py37h2515648_0
-  - setuptools=52.0.0=py37hecd8cb5_0
-  - six=1.15.0=py37hecd8cb5_0
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
+  - blas=1.0
+  - ca-certificates=2021.1.19
+  - certifi=2020.12.5
+  - intel-openmp=2019.4
+  - libcxx=10.0.0
+  - libedit=3.1.20191231
+  - libffi=3.3
+  - libgfortran=3.0.1
+  - llvm-openmp=10.0.0
+  - mkl=2019.4
+  - mkl-service=2.3.0
+  - mkl_fft=1.3.0
+  - mkl_random=1.1.1
+  - ncurses=6.2
+  - numpy-base=1.19.2
+  - openssl=1.1.1j
+  - pip=21.0.1
+  - python=3.7.7
+  - readline=8.1
+  - scipy=1.6.1
+  - setuptools=52.0.0
+  - six=1.15.0
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - wheel=0.36.2
+  - xz=5.2.5
+  - zlib=1.2.11
   - pip:
     - chardet==4.0.0
     - click==7.1.2
@@ -54,3 +54,4 @@ dependencies:
     - transformers==3.0.2
     - typing-extensions==3.7.4.3
     - urllib3==1.26.3
+
